Added the function to load an image

--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 
 <body>
     <div id="bottom-title">
-        <h1>Mi piace la nutella</h1>
+        <h1>michael trova un nome serio</h1>
     </div>
    
 
     <div id="main">
         <div class="image-column">
-            <img src="images/guastodamore.jpg" width="128">
+            <input type="file" onchange="onFileSelected(event)" id="input-file">
+            <img id="myimage" height="128" width="128" style="display: none">
+            <!--<img src="images/guastodamore.jpg" width="128">-->
         </div>
         <div class="song-column">
             <p> <b>Title:</b> <br> Guasto d'Amore</p>
